--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: post 
 ---
 
 {%comment%} 
@@ -8,8 +8,6 @@ Setup course data
 
 {% assign course = site.data[page.course] %} <!-- Load YML data -->
 {% assign units = page.units | split: ',' %}
-<h1>{{page.title}}</h1>
-<br>
 
 {%comment%} 
 Load all posts
@@ -51,9 +49,8 @@ Load all posts
 <table>
   <tr>
     <th>Week</th>
-    <th>Issues/Plans</th>
+    <th>Issues</th>
     <th>Code, Code, Code</th>
-    <th>Tools and DevOps</th>
     <th>Collaboration</th>
   </tr>
 
@@ -72,7 +69,6 @@ Load all posts
   {% for index in (start..end) -%}
     {% assign issues = null | compact %}
     {% assign ccc = null | compact %}
-    {% assign devops = null | compact %}
     {% assign collab = null | compact %}
     {% assign uk = null | compact %}
 
@@ -103,9 +99,6 @@ Load all posts
           {% elsif post.type == "ccc" %}
               {% assign ccc = ccc | unshift: title %}
               {% assign ccc = ccc | unshift: url %}  
-          {% elsif post.type == "devops" %}
-              {% assign devops = devops | unshift: title %}
-              {% assign devops = devops | unshift: url %} 
           {% elsif post.type == "collab" %}
               {% assign collab = collab | unshift: title %}
               {% assign collab = collab | unshift: url %} 
@@ -121,7 +114,7 @@ Load all posts
   {%comment%} 
   <!-- ordering units and inserting column delimiters -->
   {%endcomment%}
-  {% assign units = units | concat:issues | concat:deli | concat:ccc | concat:deli | concat:devops | concat:deli | concat:collab %}
+  {% assign units = units | concat:issues | concat:deli | concat:ccc | concat:deli | concat:collab %}
 
   {%comment%} 
   <!-- Forever Loop with base condition break processes units and build html for each type-->
@@ -137,7 +130,7 @@ Load all posts
   <td>
       {% assign units = units | shift %} <!-- remove delimiter -->
     {% else %} <!-- make a link in the column -->
-      - <a href="{{site.baseurl}}/{{units[0]}}">{{units[1]}}</a> <br/> 
+      - <a href="{{site.baseurl}}{{units[0]}}">{{units[1]}}</a> <br/> 
       {% assign units = units | shift | shift %} <!-- remove title and url -->
     {% endif %}
   {% endfor %}
