--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -1,8 +1,8 @@
 <table>
     <tr>
         <td><a href="{{site.baseurl}}/brain">Website Plans For the Future</a></td>
-        <td><a href="{{site.baseurl}}/pair/habits">Condiments</a></td>
-        <td><a href="{{site.baseurl}}/pair/showcase">Pastries</a></td>
+        <td><a href="{{site.baseurl}}/condiment">Condiments</a></td>
+        <td><a href="{{site.baseurl}}/pastry">Pastries</a></td>
         <td><a href="{{site.baseurl}}/peanut">Best Peanut Butter</a></td>
     </tr>
 </table>
