--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,7 +1,7 @@
 // Comment in or Uncomment out the following themes to use them 
 
 // Dark themes
-@import "minima/leaf/_leaf";  //Leaf theme
+//@import "minima/leaf/_leaf";  //Leaf theme
 //@import "minima/hacker/jekyll-theme-hacker"; //Hacker theme 
 //@import "minima/dracula/_dracula";
 
@@ -10,5 +10,7 @@
 //@import "minima/monophase/main"; //Monophase theme 
 //@import "minima/minimal-mistakes/__minimal-mistakes"; //Minimal Mistakes theme 
 // Mix Light themes with this if your eyes are bleeding 
-@import "minima/dracula/dark-mode";
+
+@import "scss/style";
+//@import "minima/dracula/dark-mode";
 @import "nighthawk/main";
