colors look a lot nicer

--- a/_sass/scss/_variables.scss
+++ b/_sass/scss/_variables.scss
@@ -1,13 +1,13 @@
 // Color Variables
-$primary-color: #E8505B;
-$secondary-color: #9AC4F8;
-$text-color: #E8505B;
-$text-color-dark: #E8505B;
+$primary-color: #9AC4F8;
+$secondary-color: #74c0fc;
+$text-color: #adb5bd;
+$text-color-dark: #9CA3AF;
 $body-color: #fff;
 $border-color: #ACB9C4;
-$black: #000;
-$white: #fff;
-$light: #F8F8F8;
+$black: #1f242A;
+$white: #323945;
+$light: #91A7FF;
 
 // Font Variables
 $primary-font: 'Muli', sans-serif;
