--- a/_sass/scss/_variables.scss
+++ b/_sass/scss/_variables.scss
@@ -1,12 +1,12 @@
 // Color Variables
 $primary-color: #9AC4F8;
 $secondary-color: #74c0fc;
-$text-color: #adb5bd;
-$text-color-dark: #9CA3AF;
+$text-color: #e4e7eb;
+$text-color-dark: #c3c9d3;
 $body-color: #fff;
 $border-color: #ACB9C4;
 $black: #1f242A;
-$white: #323945;
+$white: #fff;
 $light: #91A7FF;
 
 // Font Variables
