--- a/_includes/peanut_poll.html
+++ b/_includes/peanut_poll.html
@@ -14,7 +14,7 @@
         border-radius: 5px;
     }
 </style>
-<h2>Top 5 Most Popular Peanut Butter Brands</h2>
+<h2>Top Most Popular Peanut Butter Brands</h2>
 <div id="chart-container">
     <canvas id="peanut_poll" width="400" height="200"></canvas>
     <div id="button-container" class="button-container"></div> <!-- Buttons go here -->
@@ -24,55 +24,17 @@
 <button class="button-30" onclick="add_peanut()">Add Peanut Butter Brand</button>
 
 <script>
-    const url = "http://127.0.0.1:8028/api/baking/";
-    const options = {
-        method: 'GET', // *GET, POST, PUT, DELETE, etc.
-        mode: 'cors', // no-cors, *cors, same-origin
-        cache: 'default', // *default, no-cache, reload, force-cache, only-if-cached
-        credentials: 'include', // include, same-origin, omit
-        headers: {
-            'Content-Type': 'application/json',
-        },
-    };
-
-    // Function for getting peanut butter popularity and labels
-    function fetchData() {
-        fetch(url, options)
-            .then(response => {
-                if (response.status !== 200) {
-                    console.log('Error: ' + response.status);
-                    return;
-                }
-                return response.json();
-            })
-            .then(data => {
-                if (data) {
-                    // Update the chart data
-                    console.log(data);
-                    for (let i = 0; i < data.length; i++) {
-                        peanutButterLabels.push(data[i].name);
-                        peanutButterData.push(data[i].popularity);
-                    }
-                    console.log("Labels: ", peanutButterLabels, typeof peanutButterLabels);
-                    console.log("Data: ", peanutButterData, typeof peanutButterData);
-                    
-                    // Update the chart with the new data
-                    condimentRankChart.update();
-                    addButtons(); // Rebuild the buttons for the new list
-                }
-            })
-            .catch(error => {
-                console.error('There has been a problem with your fetch operation:', error);
-            });
-    }
-
-    fetchData(); // Call immediately
-
     const ctx = document.getElementById('peanut_poll').getContext('2d');
 
     // Chart data
-    let peanutButterData = []; // Popularity data
-    let peanutButterLabels = []; // Labels
+    const peanutButterData = [5, 4, 3, 2, 1]; // Popularity data
+    const peanutButterLabels = [
+        'Smuckers Organic Creamy Peanut butter', 
+        'Wild Friends Food', 
+        'Organic Unsweetened and No Salt', 
+        'Fix and Fogg', 
+        'Field Day Organic and Unsalted Peanut Butter'
+    ]; // Labels
 
     // Background colors
     const backgroundColors = [
@@ -134,25 +96,8 @@
 
     // Increase the popularity count
     function increasePopularity(index) {
-        const body = {
-            name: peanutButterLabels[index],
-            popularity: peanutButterData[index] + 1
-        };
-        const postOptions = {
-            ...options, // This will copy all properties from options
-            method: 'POST', // Override the method property
-            cache: 'no-cache', // Set the cache property
-            body: JSON.stringify(body)
-        };
-        fetch(url, postOptions)
-            .then(response => response.json())
-            .then(data => {
-                peanutButterData[index] = data.popularity; // Update the popularity data
-                condimentRankChart.update(); // Update the chart with the new data
-            })
-            .catch(error => {
-                console.error('There has been a problem with your fetch operation:', error);
-            });
+        peanutButterData[index]++;
+        condimentRankChart.update(); // Update the chart with the new data
     }
 
     // Add new peanut butter brand
