main nav bar fix :)

--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -1,9 +1,9 @@
 <table>
     <tr>
         <td><img src="{{site.baseurl}}/images/logo.png" height="60" title="Home" alt=""></td>
-        <td><a href="{{site.baseurl}}/navigation/section/csse">CSSE</a></td>
-        <td><a href="{{site.baseurl}}/navigation/section/csp">CSP</a></td>
-        <td><a href="{{site.baseurl}}/navigation/section/csa">CSA</a></td>
+        <td><a href="{{site.baseurl}}/navigation/csse.html">CSSE</a></td>
+        <td><a href="{{site.baseurl}}/navigation/csp.html">CSP</a></td>
+        <td><a href="{{site.baseurl}}/navigation/csa.html">CSA</a></td>
         <td><a href="{{site.baseurl}}/kasm/pages/intro">Kasm</a></td>
         <td id="loginArea"><a href="{{site.baseurl}}/login">Login</a></td>
         
