--- a/_includes/nav/CSA_Units/collegeboard.html
+++ b/_includes/nav/CSA_Units/collegeboard.html
@@ -2,6 +2,6 @@
     <tr>
         <td><a href="{{site.baseurl}}/ap-exam/study-plan">Study plan</a></td>
         <td><a href="{{site.baseurl}}/ap-exam/frqs">FRQ Types</a></td>
-        <!-- <td><a href="{{site.baseurl}}/ap-exam/frqs">MCQ Work</a></td> -->
+        <td><a href="{{site.baseurl}}/ap-exam/mcqs">MCQ Work</a></td>
     </tr>
 </table>
